--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
            
             <header>
-                <div class="logo-wrp"><img src="Liberty-Hospital-Logo-.jpg" alt="User's photo"></div>
+                <div class="logo-wrp"><img src="img/Liberty-Hospital-Logo-.jpg" alt="User's photo"></div>
                 <p class="credo"><i>Caring for Generations.</i></p>
                 <nav>
                     <ul>
@@ -37,7 +37,7 @@
             <h1><i>Welcome, Dr. <span class="username">House</span>!</i></h1>
             <aside>
                 <div class="profcard">
-                    <div class="photo-wrp"><img class="user-photo" src="medic.png" alt="User's photo"></div>
+                    <div class="photo-wrp"><img class="user-photo" src="img/medic.png" alt="User's photo"></div>
                     <h3 class="fullname">Gregory House, M.D.</h3>
                     <p class="jobname"><i>General Physician</i></p>
                     <p class="phone"><i class="fas fa-phone"></i> +421 2/547 778 29</p>
